force-app/main/default/objects/CCR_DeviceReplacementMatrix__mdt/CCR_DeviceReplacementMatrix__mdt.object-meta.xml
<CustomObject>
    <description>Used By :CCR
Description : Contains Device replacement pastern based on device version</description>
    <label>Device Replacement Matrix</label>
    <pluralLabel>Device Replacement Matrix</pluralLabel>
</CustomObject>