force-app/main/default/objects/CCR_DeviceReplacementMatrix__mdt/fields/CCR_ColorSwapMatrix__c.field-meta.xml
<CustomField>
    <fullName>CCR_ColorSwapMatrix__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used By: CCR
Description: This field is to identify the record used for Replacement Color Swap</description>
    <label>Color Swap Matrix</label>
    <type>Checkbox</type>
</CustomField>