force-app/main/default/objects/CCR_DeviceReplacementMatrix__mdt/fields/CCR_DeviceType__c.field-meta.xml
<CustomField>
    <fullName>CCR_DeviceType__c</fullName>
    <description>Used By : CCR
Description : Contains device Type details like : SLU Charger, SLU Holder or Mobility Kit</description>
    <label>Device Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>