force-app/main/default/objects/CCR_DeviceReplacementMatrix__mdt/fields/CCR_NewDeviceModel__c.field-meta.xml
<CustomField>
    <fullName>CCR_NewDeviceModel__c</fullName>
    <description>Used By : CCR
Description : Contains New device Model to be replaced</description>
    <label>New Device Model</label>
    <length>10</length>
    <type>Text</type>
</CustomField>