force-app/main/default/objects/CCR_DeviceReplacementMatrix__mdt/fields/CCR_OldDeviceModel__c.field-meta.xml
<CustomField>
    <fullName>CCR_OldDeviceModel__c</fullName>
    <description>Used By : CCR
Description : Contains Old device Model to be replaced</description>
    <label>Old Device Model</label>
    <length>10</length>
    <type>Text</type>
</CustomField>