force-app/main/default/objects/CCR_DeviceReplacementMatrix__mdt/fields/CCR_ShowWarning__c.field-meta.xml
<CustomField>
    <fullName>CCR_ShowWarning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used By : CCR
Description : Checked if warning to be shown when replacing device.
unchecked if No need to Warning.</description>
    <label>Show Warning</label>
    <type>Checkbox</type>
</CustomField>